bug related to overflow in mobile browser fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,6 +9,9 @@
 body {
     overflow-x: hidden;
 }
+.container {
+    overflow-x: hidden;
+}
 header { 
     width: 80%;
     margin: 3% 10%;
